docs/original_moodle/entregas/todas/3/Segundo Previo/PARADA CABALLERO - 1151907 JAVIER ALONSO 2592/2019-11-05-09-20-46.ceg/compilation.txt
Almuerzo.java:34: error: illegal start of expression
       return 0;
       ^
Almuerzo.java:33: error: not a statement
       Fruta.getPrecio() + 
                         ^
Almuerzo.java:34: error: not a statement
       return 0;
              ^
3 errors
Not compiled
